# docker-template-for-vscode

./: LICENSE  README.md
cpp-clang/: CMakeLists.txt
cpp-clang/.devcontainer/: Dockerfile  devcontainer.json
cpp-clang/src/: hello.cpp  main.cpp
cpp-ms/: .gitignore  CMakeLists.txt
cpp-ms/.devcontainer/: Dockerfile  devcontainer.json
cpp-ms/src/: hello.cpp
cpp-ms/src/sample1/: CMakeLists.txt  main.cpp
cpp-ms/src/sample2/: CMakeLists.txt  hello.h  main.cpp
cpp-ms/src/sample3/: CMakeLists.txt  hello.cpp  hi.cpp  hi.h  main.cpp
java-sdkman/.devcontainer/: Dockerfile  devcontainer.json
python-mamba/.devcontainer/: devcontainer.json  setup.sh
rust-ms/.devcontainer/: devcontainer.json
rust-ubuntu/.devcontainer/: Dockerfile  devcontainer.json
typescript-node/.devcontainer/: README.md  devcontainer.json
ubuntu/.devcontainer/: Dockerfile  devcontainer.json
